compiler/tests/compiler/must_fail/t_03.mil.exp.err
tests/compiler/must_fail/t_03.mil:3:3: 3:8 error: <-- first instruction here
  x = 0;
  ^^^^^^
tests/compiler/must_fail/t_03.mil:4:3: 4:17 error: declarations cannot follow instructions
  _y : stack u64;
  ^^^^^^^^^^^^^^^
